force-app/main/default/objects/Nebula_Integration_Log__c/Nebula_Integration_Log__c.object-meta.xml
<CustomObject>
    <description>Registro de trazabilidad por cada solicitud entrante de la integración Nebüla. Un registro por request: resultado, duración, código de respuesta y referencia al Lead creado. Sin payload crudo (minimización de datos personales).</description>
    <label>Log Integración Nebüla</label>
    <nameField>
        <displayFormat>NIL-{00000}</displayFormat>
        <label>Número de Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs Integración Nebüla</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>