force-app/main/default/objects/Nebula_Integration_Log__c/fields/Processing_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Ms__c</fullName>
    <description>Duración del procesamiento de la solicitud en milisegundos.</description>
    <inlineHelpText>Tiempo de procesamiento de la solicitud, en milisegundos.</inlineHelpText>
    <label>Tiempo de Procesamiento (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>