force-app/main/default/objects/Nebula_Integration_Log__c/fields/Request_Received_At__c.field-meta.xml
<CustomField>
    <fullName>Request_Received_At__c</fullName>
    <description>Fecha y hora de recepción de la solicitud HTTP.</description>
    <inlineHelpText>Momento en que se recibió la solicitud de Nebüla.</inlineHelpText>
    <label>Solicitud Recibida</label>
    <type>DateTime</type>
</CustomField>