force-app/main/default/objects/Nebula_Integration_Log__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <description>Código de estado HTTP devuelto a Nebüla para esta solicitud.</description>
    <inlineHelpText>Código HTTP de la respuesta (201, 422, 500, etc.).</inlineHelpText>
    <label>Código de Respuesta</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>